grammar.js
    source_file: ruleFactory => seq(
      optional(ruleFactory.package_declaration),
      repeat(ruleFactory._statement),
    ),

    package_declaration: ruleFactory => seq(
      'package',
      field('package_path', ruleFactory.dotted_identifier),
    ),

    dotted_identifier: ruleFactory => seq(
      ruleFactory._path_segment,
      repeat(seq('.', ruleFactory._path_segment)),
    ),

    import_statement: ruleFactory => choice(
      seq(
        optional(ruleFactory.access_modifier),
        'import',
        field('module_path', ruleFactory.dotted_identifier),
        optional(seq('as', field('import_alias', ruleFactory.identifier))),
      ),
      seq(
        optional(ruleFactory.access_modifier),
        'from',
        field('module_path', ruleFactory.dotted_identifier),
        'import',
        field('imported_entities', ruleFactory._import_target),
      ),
    ),

    import_item_list: ruleFactory => seq(
      ruleFactory.import_item,
      repeat(seq(',', ruleFactory.import_item)),
    ),

    import_item_brace_list: ruleFactory => seq(
      '{',
      ruleFactory.import_item,
      repeat(seq(',', ruleFactory.import_item)),
      optional(','),
      '}',
    ),

    import_item: ruleFactory => seq(
      field('entity_name', ruleFactory.identifier),
      optional(seq('as', field('import_alias', ruleFactory.identifier))),
    ),

    // ==========================================
    // Declarations
    // ==========================================

    function_declaration: ruleFactory => seq(
      optional(ruleFactory.access_modifier),
      repeat(ruleFactory.function_modifier),
      choice('function', 'property'),
      field('declared_name', ruleFactory.identifier),
      optional(ruleFactory.generic_parameter_list),
      ruleFactory.parameter_list,
      optional(seq('->', field('return_type', ruleFactory.type_specifier))),
      optional(seq('raises', ruleFactory._raises_type_list)),
      choice(ruleFactory.indented_body, ':', ';'),
    ),

    parameter_list: ruleFactory => seq(
      '(',
      optional(seq(
        ruleFactory.parameter_declaration,
        repeat(seq(',', ruleFactory.parameter_declaration)),
        optional(','),
      )),
      ')',
    ),

    parameter_declaration: ruleFactory => choice(
      ruleFactory.self_parameter,
      '...',
      seq(
        optional(ruleFactory.access_modifier),
        field('parameter_type', ruleFactory.type_specifier),
        field('declared_name', ruleFactory.identifier),
        optional(choice(
          ruleFactory.variadic_array_suffix,
          ruleFactory.kwargs_brace_suffix,
        )),
        optional(seq('=', field('default_value', ruleFactory.expression))),
      ),
    ),

    argument_list: ruleFactory => seq(
      '(',
      optional(seq(
        ruleFactory._argument,
        repeat(seq(',', ruleFactory._argument)),
        optional(','),
      )),
      ')',
    ),

    keyword_argument: ruleFactory => prec(1, seq(
      field('argument_name', ruleFactory.identifier),
      '=',
      field('argument_value', ruleFactory.expression),
    )),

    // ==========================================
    // Generics
    // ==========================================

    generic_argument_list: ruleFactory => seq(
      '<',
      ruleFactory.type_specifier,
      repeat(seq(',', ruleFactory.type_specifier)),
      '>',
    ),

    // ==========================================
    // Types
    // ==========================================

    type_specifier: ruleFactory => choice(
      ruleFactory.nullable_type,
      ruleFactory.pointer_type,
      ruleFactory.generic_type_specifier,
      ruleFactory.callable_type,
      ruleFactory.meta_type,
      ruleFactory.identifier,
    ),

    nullable_type: ruleFactory => seq(
      '?',
      field('inner_type', ruleFactory.type_specifier),
    ),

    generic_type_specifier: ruleFactory => seq(
      field('generic_base_name', ruleFactory.identifier),
      ruleFactory.generic_argument_list,
    ),

    callable_type: ruleFactory => seq(
      'Callable',
      '<',
      field('callable_return_type', ruleFactory.type_specifier),
      ',',
      '<',
      optional(seq(
        ruleFactory.type_specifier,
        repeat(seq(',', ruleFactory.type_specifier)),
      )),
      '>',
      '>',
    ),

    variable_declaration: ruleFactory => prec.dynamic(10, prec.right(seq(
      optional(ruleFactory.access_modifier),
      optional('mut'),
      field('variable_type', ruleFactory.type_specifier),
      field('declared_name', ruleFactory.identifier),
      optional(seq('=', field('initial_value', ruleFactory.expression))),
    ))),

    return_statement: ruleFactory => prec.right(seq(
      'return',
      optional(field('return_value', ruleFactory.expression)),
    )),

    expression_statement: ruleFactory => ruleFactory.expression,

    // ==========================================
    // Inline Assembly
    // ==========================================

    expression: ruleFactory => choice(
      ruleFactory.match_expression,
      ruleFactory.lambda_expression,
      ruleFactory.binary_expression,
      ruleFactory.unary_expression,
      ruleFactory.await_expression,
      ruleFactory.cast_expression,
      ruleFactory.primary_expression,
    ),

    lambda_expression: ruleFactory => choice(
      seq(
        'lambda',
        optional('final'),
        optional(ruleFactory._lambda_parameter_list),
        ':',
        field('lambda_body', ruleFactory.expression),
      ),
      seq(
        'function',
        ruleFactory.parameter_list,
        optional(seq('->', field('return_type', ruleFactory.type_specifier))),
        ruleFactory.indented_body,
      ),
    ),

    binary_expression: ruleFactory => choice(
      prec.left(1, seq(field('left_operand', ruleFactory.expression), 'or', field('right_operand', ruleFactory.expression))),
      prec.left(2, seq(field('left_operand', ruleFactory.expression), 'and', field('right_operand', ruleFactory.expression))),
      prec.left(3, seq(field('left_operand', ruleFactory.expression), '|', field('right_operand', ruleFactory.expression))),
      prec.left(4, seq(field('left_operand', ruleFactory.expression), '^', field('right_operand', ruleFactory.expression))),
      prec.left(5, seq(field('left_operand', ruleFactory.expression), '&', field('right_operand', ruleFactory.expression))),
      prec.left(6, seq(field('left_operand', ruleFactory.expression), choice('==', '!='), field('right_operand', ruleFactory.expression))),
      prec.left(7, seq(field('left_operand', ruleFactory.expression), choice('<', '<=', '>', '>=', 'in', 'instanceof', 'is', 'subclassof'), field('right_operand', ruleFactory.expression))),
      prec.left(7, seq(field('left_operand', ruleFactory.expression), 'is', 'not', field('right_operand', ruleFactory.expression))),
      prec.left(7, seq(field('left_operand', ruleFactory.expression), 'not', 'in', field('right_operand', ruleFactory.expression))),
      prec.left(8, seq(field('left_operand', ruleFactory.expression), choice('<<', '>>'), field('right_operand', ruleFactory.expression))),
      prec.left(9, seq(field('left_operand', ruleFactory.expression), choice('+', '-'), field('right_operand', ruleFactory.expression))),
      prec.left(10, seq(field('left_operand', ruleFactory.expression), choice('*', '/', '%'), field('right_operand', ruleFactory.expression))),
      prec.right(11, seq(field('left_operand', ruleFactory.expression), '**', field('right_operand', ruleFactory.expression))),
      prec.left(7, seq(field('left_operand', ruleFactory.expression), choice('..', '...'), field('right_operand', ruleFactory.expression))),
    ),

    unary_expression: ruleFactory => choice(
      prec(13, seq('not', field('unary_operand', ruleFactory.expression))),
      prec(13, seq('~', field('unary_operand', ruleFactory.expression))),
      prec(13, seq('-', field('unary_operand', ruleFactory.expression))),
      prec(13, seq('+', field('unary_operand', ruleFactory.expression))),
      prec(13, seq('addressof', field('unary_operand', ruleFactory.expression))),
      prec(13, seq('move', field('unary_operand', ruleFactory.expression))),
    ),

    cast_expression: ruleFactory => prec.left(12, seq(
      field('cast_operand', ruleFactory.expression),
      'as',
      field('target_type', ruleFactory.type_specifier),
    )),

    primary_expression: ruleFactory => choice(
      ruleFactory.identifier,
      ruleFactory.integer_literal,
      ruleFactory.float_literal,
      ruleFactory.string_literal,
      ruleFactory.character_literal,
      ruleFactory.boolean_literal,
      ruleFactory.none_literal,
      ruleFactory.self_expression,
      ruleFactory.parent_expression,
      ruleFactory.new_expression,
      ruleFactory.parenthesized_expression,
      ruleFactory.list_literal,
      ruleFactory.set_literal,
      ruleFactory.dict_literal,
      ruleFactory.comprehension_expression,
      ruleFactory.member_access_expression,
      ruleFactory.call_expression,
      ruleFactory.subscript_expression,
      ruleFactory.postfix_expression,
    ),

    new_expression: ruleFactory => prec(15, seq(
      'new',
      field('constructed_type', ruleFactory.type_specifier),
      ruleFactory.argument_list,
    )),

    list_literal: ruleFactory => seq(
      '[',
      optional(seq(
        ruleFactory.expression,
        repeat(seq(',', ruleFactory.expression)),
        optional(','),
      )),
      ']',
    ),

    member_access_expression: ruleFactory => prec.left(16, seq(
      field('accessed_object', ruleFactory.expression),
      '.',
      field('accessed_member', ruleFactory.identifier),
    )),

    call_expression: ruleFactory => prec.left(16, seq(
      field('called_function', ruleFactory.expression),
      optional(ruleFactory.generic_argument_list),
      ruleFactory.argument_list,
    )),

    subscript_expression: ruleFactory => prec.left(16, seq(
      field('subscripted_object', ruleFactory.expression),
      '[',
      field('subscript_index', ruleFactory.expression),
      ']',
    )),

    access_modifier: _ruleFactory => choice(
      'public',
      'private',
      'protect',
    ),

    // ==========================================
    // Block
    // ==========================================

    indented_body: ruleFactory => seq(
      ':',
      ruleFactory._indent,
      repeat1(choice(
        ruleFactory._statement,
        ruleFactory.docstring_comment,
        ruleFactory.enum_variant,
      )),
      ruleFactory._dedent,
    ),

    // ==========================================
    // Literals
    // ==========================================

    identifier: _ruleFactory => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: _ruleFactory => token(choice(
      /0[bB][01](_?[01])*/,
      /0[oO][0-7](_?[0-7])*/,
      /0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
      /[0-9](_?[0-9])*/,
    )),

    float_literal: _ruleFactory => token(
      /[0-9](_?[0-9])*\.[0-9](_?[0-9])*/,
    ),

    string_literal: _ruleFactory => token(choice(
      seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
    )),

    character_literal: _ruleFactory => token(
      seq("'", choice(/[^'\\]/, /\\./), "'"),
    ),

    boolean_literal: _ruleFactory => choice('True', 'False'),
    none_literal: _ruleFactory => 'None',

    // ==========================================
    // Comments
    // ==========================================
